--- a/.github/workflows/java-ci-check.yml
+++ b/.github/workflows/java-ci-check.yml
@@ -19,7 +19,7 @@ jobs:
         uses: gradle/gradle-build-action@v2
         with:
           arguments: build
-          build-root-directory: java-project-72
+          build-root-directory: /
       - name: Publish code coverage
         uses: paambaati/codeclimate-action@v3.0.0
         env:
