--- a/.github/workflows/java-ci-check.yml
+++ b/.github/workflows/java-ci-check.yml
@@ -21,24 +21,24 @@ jobs:
       - run: ./gradlew checkstyleMain
       - run: ./gradlew test
 
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    if: ${{ github.event_name == 'push' }}
+  # deploy:
+  #   needs: build
+  #   runs-on: ubuntu-latest
+  #   if: ${{ github.event_name == 'push' }}
 
-    steps:
-      - uses: actions/checkout@v3
-      - uses: docker/setup-buildx-action@v2
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: docker/setup-buildx-action@v2
 
-      - uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+  #     - uses: docker/login-action@v2
+  #       with:
+  #         username: ${{ secrets.DOCKER_USERNAME }}
+  #         password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - uses: docker/build-push-action@v4
-        with:
-          context: .
-          push: true
-          cache-from: hexletcomponents/java-javalin-example:latest
-          cache-to: type=inline
-          tags: hexletcomponents/java-javalin-example:latest
+  #     - uses: docker/build-push-action@v4
+  #       with:
+  #         context: .
+  #         push: true
+  #         cache-from: hexletcomponents/java-javalin-example:latest
+  #         cache-to: type=inline
+  #         tags: hexletcomponents/java-javalin-example:latest
