--- a/.github/workflows/java-ci-check.yml
+++ b/.github/workflows/java-ci-check.yml
@@ -18,8 +18,8 @@ jobs:
         uses: gradle/gradle-build-action@v2
         with:
           gradle-version: 8.3
-      - run: ./gradlew check
-      - run: ./gradlew test
+      - run: ./app/gradlew checkstyleMain
+      - run: ./app/gradlew test
 
   # deploy:
   #   needs: build
