--- a/.github/workflows/java-ci-check.yml
+++ b/.github/workflows/java-ci-check.yml
@@ -20,8 +20,16 @@ jobs:
           gradle-version: 8.3
           arguments: build
           build-root-directory: app
-      - run: ./gradlew checkstyleMain
-      - run: ./gradlew test
+      - run: ./app/gradlew checkstyleMain
+      - run: ./app/gradlew test
+      - name: Publish code coverage
+        uses: paambaati/codeclimate-action@v3.0.0
+        env:
+          CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
+          JACOCO_SOURCE_PATH: app/src/main/java
+        with:
+          coverageCommand: make report
+          coverageLocations: ${{github.workspace}}/app/build/reports/jacoco/test/jacocoTestReport.xml:jacoco
 
   # deploy:
   #   needs: build
